force-app/main/default/objects/Behavior_Evaluation_Summary__c/Behavior_Evaluation_Summary__c.object-meta.xml
<CustomObject>
    <label>Behavior Evaluation Summary</label>
    <nameField>
        <displayFormat>BES-{0000}</displayFormat>
        <label>Behavior Evaluation Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Evaluation Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>