force-app/main/default/objects/Behavior_Evaluation_Summary__c/fields/Behavior_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Evaluation__c</fullName>
    <label>Behavior Evaluation</label>
    <referenceTo>Behavior_Evaluation__c</referenceTo>
    <relationshipLabel>Behavior Evaluation Summaries</relationshipLabel>
    <relationshipName>Behavior_Evaluation_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>