force-app/main/default/objects/Behavior_Evaluation_Summary__c/fields/ConfigId__c.field-meta.xml
<CustomField>
    <fullName>ConfigId__c</fullName>
    <label>ConfigId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>