force-app/main/default/objects/Behavior_Evaluation_Summary__c/fields/Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Skip_Reason__c</fullName>
    <label>Skip Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>