force-app/main/default/objects/Behavior_Evaluation_Summary__c/fields/Summary_Comments__c.field-meta.xml
<CustomField>
    <fullName>Summary_Comments__c</fullName>
    <label>Summary Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>