force-app/main/default/objects/Behavior_Evaluation_Summary__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>